fix: adjust dialog cover padding for improved readability

--- a/src/components/dialogs/dialog/penpot.scss
+++ b/src/components/dialogs/dialog/penpot.scss
@@ -3,7 +3,8 @@
   --dialog-background-color: rgba(0, 0, 0, 0.5);
 
   --dialog-cover-width: 248px;
-  --dialog-cover-padding: var(--size-xsmall) 0 var(--size-xsmall) var(--size-medium);
+  --dialog-cover-padding: var(--size-xsmall) 0 var(--size-xsmall)
+    var(--size-medium);
   --dialog-cover-ratio: 8 / 5;
 
   --dialog-text-gap: var(--size-xxsmall);
